# commands

./: .gitignore  Meeting_Notes_Skill_Guide.docx  README.md  frameview-report-generator.md  generate_top5_plc.py  plc-doc-creation-steps.docx  plc-top5-generator.md
.claude/commands/: plc-doc.md  plc-docs-generator.md
borrowed tools/archivist/: SKILL.md
borrowed tools/archivist/references/: CLASSIFICATION.md
borrowed tools/archivist/scripts/: clean_import.py  convert_html_emails.py  split_slack_threads.py
borrowed tools/plcman/: SKILL.md
borrowed tools/plcman/references/: handoff-template.md  task-handlers.md
commands/fv-report-gen/references/: data-sources.md
commands/fv-report-gen/scripts/: generate-report.py
commands/meeting-notes/: SKILL.md
commands/meeting-notes/references/: notes-format.md  transcript-cli.md
commands/plc-top5-report-gen/: SKILL.md
commands/plc-top5-report-gen/references/: report-format.md
doc-generators/plc-doc-gen/: SKILL.md
doc-generators/plc-docs/: SKILL.md
generators/plc-doc-gen/: template-sadd.xhtml  template-spp.xhtml
generators/tava-gen/: pyproject.toml
generators/tava-gen/references/: tava-guidance.md
plc-generators/plc-doc-gen/: SKILL.md  template-srd.xhtml
plc-generators/tava-gen/: SKILL.md
plcman/: CHANGELOG.md  SKILL.md
plcman/references/: handoff-template.md  task-handlers.md
report-generators/frameview-report/: SKILL.md
report-generators/fv-report-gen/: SKILL.md
report-generators/plc-top5-report-gen/: SKILL.md
tools/archivist/references/: FILING.md  (+1 more)
tools/tava-gen/: README.md  SKILL.md
(+18 files in other folders)
