[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tava-gen"
version = "0.1.0"
description = "TAVA architecture diagram and document generator for nSpect AI-Powered TAVA 3.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tava-gen = "tava_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
